fix(document): align action buttons to the right (#328)
- postion buttons at right of rename document modal
- conditionally disable save button while sending a request to save
renamed document, to prevent multiple save requests

[Delivers #162011054]

--- a/src/views/Documents/Documents.scss
+++ b/src/views/Documents/Documents.scss
@@ -34,7 +34,7 @@
     border-radius: 2px;
     align-items: center;
     margin-top: 8px;
-  
+
     #item-name {
       height: 18px;
       color: #4F4F4F;
@@ -46,14 +46,14 @@
 
     #deleted-item {
       height: 18px;
-      width: 283px;	
-      color: #999999;	
-      font-family: "DIN Pro";	
-      font-size: 14px;	
+      width: 283px;
+      color: #999999;
+      font-family: "DIN Pro";
+      font-size: 14px;
       line-height: 18px;
       margin-left: 30px;
     }
-  
+
     #edit-btn {
       margin-left: auto;
       height: 18px;
@@ -68,7 +68,7 @@
       margin-right: 40px;
       cursor: pointer;
     };
-  
+
     #delete-btn {
       height: 18px;
       color: #3359DB;
@@ -142,64 +142,77 @@
 
 .modal {
   &.visible {
-     &#edit-document-modal {
-        top: auto;
-        height: 275px;
-        #edit-document-modal-content {
-          padding: 0px;
-          width: 100%;
-          display: flex;
-          flex-direction: column;
-          .doc-rename {
-            padding: 30px;
-            label {
-              width: 100%;
-              height: 18px;
-              font-family: "DIN Pro";
-              font-size: 14px;
-              line-height: 18px;
-              .asterick {
-                color: red
-              }
-              .doc-rename-input {
-                width: 96%;
-                margin: 5px 0px;
-                padding-left: 15px;
-                font-size: 15px;
-                border-radius: 2px;
-                border: 1px solid #D4D4D4;
-                color:#4F4F4F;
-                height: 36px;
-                outline: none;
-                font-family: "DIN Pro";
-                font-weight: 300;
-              }
-            }
-          }
-          .submit-area {
-            border-top: 1px solid #f8f8f8;
-            width: 100%;
-            padding: 16px 0px;
-            p {
-              margin: 0 16px;
-              .doc-btn-save {
-                background-color: #3359DB;
-                color: #FFFFFF;
-                border: none;
-                cursor: pointer;
-                &:disabled {
-                  background-color: rgba(51, 89, 219, 0.3);
-                  cursor: not-allowed;
-                }
-              }
-            }
-          }
+    &#edit-document-modal {
+      top: auto;
+      height: 285px;
 
+      .asterisk {
+        color: red
+      }
+    }
+
+
+    #edit-document-modal-content {
+      padding: 0px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+
+      .doc-rename {
+        padding: 30px;
+
+        label {
+          width: 100%;
+          height: 18px;
+          font-family: "DIN Pro";
+          font-size: 14px;
+          line-height: 18px;
+        }
+      }
+
+      .doc-rename-input {
+        width: 96%;
+        margin: 5px 0px;
+        padding-left: 15px;
+        font-size: 15px;
+        border-radius: 2px;
+        border: 1px solid #D4D4D4;
+        color:#4F4F4F;
+        height: 36px;
+        outline: none;
+        font-family: "DIN Pro";
+        font-weight: 300;
+      }
+      .submit-area {
+        border-top: 1px solid #f8f8f8;
+        width: 100%;
+        padding: 16px 0px;
+        position: relative;
+
+        p {
+          margin: 0;
+          position: absolute;
+          right: 0;
+          padding: 0 30px;
 
         }
-     }
-   }
- }
+
+        .doc-btn-save {
+          background-color: #3359DB;
+          color: #FFFFFF;
+          border: none;
+          cursor: pointer;
+          margin-right: 0;
+
+          &:disabled {
+            background-color: rgba(51, 89, 219, 0.3);
+            cursor: not-allowed;
+          }
+        }
+      }
+    }
+  }
+}
 
 $primary-color: #4F4F4F;
 $border-color: #e4e4e4;
@@ -218,7 +231,7 @@ $border-color: #e4e4e4;
 }
 
 .download-document-align {
-  padding-left: 15px; 
+  padding-left: 15px;
 }
 
 .data_cell {
